--- a/007-javascript-class/index.html
+++ b/007-javascript-class/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./app.js" defer></script>
+    <!-- <script src="./app.js" defer></script> -->
+    <script src="./async-js.js" defer></script>
     <link rel="stylesheet" href="./style.css">
     <title>javascript class</title>
 </head>
 <body>
-    <main>
+    <!-- <main>
         <button id = "changeBgBtn">
            <span class="color-value">rgb(255, 255, 255) </span> 
         </button>
-    </main>
+    </main> -->
+
+    <h1>Async js</h1>
 </body>
 </html>
